--- a/matrix.html
+++ b/matrix.html
@@ -9,7 +9,10 @@
     <link rel="icon" type="image/x-icon" href="MatrixIconSimple.png">
 </head>
 <body>
-    <canvas id="c"></canvas>
+    <!-- Make the entire page clickable -->
+    <a href="https://github.com/hongbo-wei" target="_blank" id="background-link">
+        <canvas id="c"></canvas>
+    </a>
     <script src="matrix.js"></script>
 </body>
 </html>
