--- a/matrix.html
+++ b/matrix.html
@@ -9,10 +9,8 @@
     <link rel="icon" type="image/x-icon" href="MatrixIconSimple.png">
 </head>
 <body>
-    <!-- Make the entire page clickable -->
-    <a href="https://github.com/hongbo-wei" target="_blank" id="background-link">
-        <canvas id="c"></canvas>
-    </a>
+    <audio id="background-music" src="matrix.wav"></audio>
+    <canvas id="c"></canvas>
     <script src="matrix.js"></script>
 </body>
 </html>
