--- a/matrix.html
+++ b/matrix.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="MatrixIconSimple.png">
 </head>
 <body>
-    <audio id="background-music" src="matrix.wav"></audio>
+    <audio id="background-music" src="matrix.wav" loop></audio>
     <canvas id="c"></canvas>
     <script src="matrix.js"></script>
 </body>
